--- a/Frontend/src/routes/HomePage/HomePage.scss
+++ b/Frontend/src/routes/HomePage/HomePage.scss
@@ -1,3 +1,4 @@
+@import "../../css/responsive.scss";
 .homePage {
   display: flex;
   height: 100%;
@@ -13,13 +14,41 @@
       gap: 50px;
       height: 100%;
 
+      @include md {
+        padding: 0;
+      }
+
+      @include sm {
+        justify-content: flex-start;
+      }
       .title {
         font-size: 64px;
+
+        @include la {
+          font-size: 48px;
+        }
       }
 
       .boxes {
         display: flex;
         justify-content: space-between;
+
+        @include sm {
+          display: none;
+        }
+
+        h1 {
+          font-size: 36px;
+
+          @include la {
+            font-size: 32px;
+          }
+        }
+
+        h2 {
+          font-size: 20px;
+          font-weight: 300;
+        }
       }
     }
   }
@@ -31,10 +60,18 @@
     display: flex;
     align-items: center;
 
+    @include md {
+      display: none;
+    }
+
     img {
       width: 115%;
       position: absolute;
       right: 0;
+
+      @include la {
+        width: 105%;
+      }
     }
   }
 }
