--- a/Frontend/src/components/Filter/Filter.scss
+++ b/Frontend/src/components/Filter/Filter.scss
@@ -11,9 +11,9 @@
   .item {
     display: flex;
     flex-direction: column;
-    gap: 2;
+    gap: 2px;
 
-    lebel {
+    label {
       font-size: 10px;
     }
 
@@ -22,6 +22,33 @@
       width: 100px;
       padding: 10px;
       border: 1px solid #e0e0e0;
+      border-radius: 5px;
+      font-size: 14px;
+    }
+  }
+
+  .top {
+    input {
+      width: 100%;
+    }
+  }
+
+  .bottom {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+
+    button {
+      width: 100px;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+      background-color: orange;
+
+      img {
+        width: 24px;
+        height: 24px;
+      }
     }
   }
 }
