--- a/Frontend/src/routes/ListPage/ListPage.scss
+++ b/Frontend/src/routes/ListPage/ListPage.scss
@@ -1,12 +1,19 @@
 .ListPage {
   display: flex;
-  height: 100vh;
+  height: 100%;
 
   .listContainer {
     flex: 3;
+    height: 100%;
 
     .wrapper {
+      height: 100%;
       padding-right: 50px;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      overflow-y: scroll;
+      padding-bottom: 50px;
     }
   }
   .mapContainer {
