--- a/Frontend/src/components/slider/slider.scss
+++ b/Frontend/src/components/slider/slider.scss
@@ -6,6 +6,10 @@
   display: flex;
   gap: 20px;
 
+  @include sm {
+    height: 280px;
+  }
+
   .fullSlider {
     position: absolute;
     width: 100vw;
@@ -16,6 +20,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 9999;
 
     .arrow {
       flex: 1;
@@ -25,6 +30,14 @@
 
       img {
         width: 50px;
+
+        @include md {
+          width: 30px;
+        }
+
+        @include sm {
+          width: 20px;
+        }
 
         &.right {
           transform: rotate(180deg);
@@ -63,6 +76,10 @@
 
   .bigImage {
     flex: 3;
+
+    @include sm {
+      flex: 2;
+    }
   }
   .smallImages {
     flex: 1;
@@ -71,8 +88,16 @@
     justify-content: space-between;
     gap: 20px;
 
+    @include sm {
+      flex: 1;
+    }
+
     img {
       height: 100px;
+
+      @include sm {
+        height: 80px;
+      }
     }
   }
 }
