--- a/Frontend/src/components/Navbar/NavBar.scss
+++ b/Frontend/src/components/Navbar/NavBar.scss
@@ -51,7 +51,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    background-color: bisque;
+    background-color: #fcf5f3;
     height: 100%;
 
     @include md {
@@ -63,19 +63,61 @@ nav {
       margin: 20px;
     }
 
-    .register {
-      background-color: yellow;
+    .user {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+
+      img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-right: 20px;
+      }
+
+      span {
+        @include sm {
+          display: none;
+        }
+      }
+
+      .profile {
+        padding: 12px 24px;
+        background-color: #fece51;
+        cursor: pointer;
+        border: none;
+        position: relative;
+
+        .notification {
+          position: absolute;
+          top: -8px;
+          right: -8px;
+          background-color: red;
+          color: white;
+          border-radius: 50%;
+          width: 26px;
+          height: 26px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
     }
 
-    img {
-      width: 36px;
-      height: 36px;
-      cursor: pointer;
+    .register {
+      background-color: yellow;
     }
 
     .menuIcon {
       display: none;
       z-index: 999;
+
+      img {
+        width: 36px;
+        height: 36px;
+        cursor: pointer;
+      }
 
       @include sm {
         display: initial;
