--- a/Frontend/src/components/SearchBar/SearchBar.scss
+++ b/Frontend/src/components/SearchBar/SearchBar.scss
@@ -72,19 +72,26 @@
       }
     }
 
-    button {
-      border: none;
-      cursor: pointer;
-      background-color: cadetblue;
+    a {
       flex: 1;
+      background-color: cadetblue;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-      @include sm {
-        padding: 10px;
-      }
+      button {
+        border: none;
+        cursor: pointer;
+        background-color: cadetblue;
 
-      img {
-        width: 24px;
-        height: 24px;
+        @include sm {
+          padding: 10px;
+        }
+
+        img {
+          width: 24px;
+          height: 24px;
+        }
       }
     }
   }
